[Update #1] plot mini red line?

--- a/learning/Makefile
+++ b/learning/Makefile
@@ -1,9 +1,9 @@
 CC = gcc
 FLAGS = -Wall -Werror -Wextra
 
-MINLIB  		= ./minilibx-linux/
+MINLIB  		= ../minilibx-linux/
 XLIB				=  /opt/X11/lib
-INCLUDE	= ./minilibx-linux/
+INCLUDE	= ../minilibx-linux/
 NAME = test
 
 %.o: %.c
@@ -11,5 +11,8 @@ NAME = test
 
 $(NAME): $(OBJ)
 	$(CC) $(OBJ) -L$(MINLIB) -L$(XLIB) -lXext -lX11 -lmlx -I$(INCLUDE) -framework OpenGL -framework AppKit intro.c -o $(NAME)
+
+fclean:$(NAME)
+	rm $(NAME)
 
 
