[Update #15] using mlx

--- a/learning/Mandelbrot/Makefile
+++ b/learning/Mandelbrot/Makefile
@@ -1,3 +1,17 @@
+CC 	   = gcc
+FLAGS  = -Wall -Werror -Wextra
+
+NAME   = Mandelbrot
+MLXDIR = ../../minilibx-linux
+XLIB   = /opt/X11/lib
+
+%.o: %.c
+	$(CC) $(FLAGS) -Imlx -c $< -o $@
+
+$(NAME):
+	$(CC)  -L$(MLXDIR) -L$(XLIB) -lXext -lX11 -lmlx -I$(MLXDIR) -framework OpenGL -framework AppKit membership.c complex.c -o $(NAME)
+
+
 test:
 	gcc test_complex.c complex.c -o complex_test
 	./complex_test
